@@ -1,0 +1,135 @@
+<?php
+
+return array(
+	'Create' => 'Utwórz',
+	'Your Account has been activated. Thank you for your registration.' =>
+	'Twoje konto zostało aktywowane. Dziękujemy za rejestrację. ',
+	'Registration' => 'Rejestracja',
+	'This users have been assigned to this Role', 'Ci użytkownicy zostali przypisani do tej roli ',
+	'Edit this Role' => 'Edytuj tę rolę',
+	'Update' => 'Uaktualnij',
+	'Roles' => 'Role',
+	'From' => 'Od',
+	'View' => 'Widok',
+	'This User belongs to these roles: ' => 'Ten użytkownik należy do tych ról',
+	'User belongs to Roles' => 'Użytkownik należy do ról',
+	'Login' => 'Zaloguj',
+	'Users: ' => 'Użytkownicy: ',
+	'Changes are saved' => 'Zmiany zostały zapisane',
+	'Please check your email. Instructions have been sent to your email address.' => 'Prosze sprawdzić maila. Instrukcje zostały wysłane na Twój adres mailowy',
+	'Description' => 'Opis',
+	'Create Role' => 'Utwórz rolę',
+	'List Roles' => 'Lista roli',
+	'Manage Roles' => 'Zarządzaj rolami',
+	'Logout' => 'Wyloguj',
+	'username' => 'Nazwa użytkownika',
+	'email address' => 'Adres E-Mail',
+	'email' => 'E-Mail',
+	'username or email' => 'Login albo E-Mail',
+	'password' => 'Hasło',
+	'Remember me next time' => 'Zapamiętaj mnie następnym razem',
+	'Username is incorrect.' => 'Nazwa użytkownika nieprawidłowa',
+	'Email is incorrect.' => 'Adres E-Mail jest nieprawidłowy',
+	'This user\'s name already exists.' => 'Użytkownik o tej nazwie już istnieje',
+	'This user\'s email adress already exists.' => 'Ten adres E-Mail już istnieje',
+	'You account is not activated.' => 'Twoje konto nie zostało aktywowane',
+	'You account is blocked.' => 'Twoje konto zostało zablokowane',
+	'Password is incorrect.' => 'Hasło jest nieprawidłowe',
+	'E-mail' => 'E-mail',
+	'Verification Code' => 'Kod weryfikacyjny',
+	'Select multiple recipients by holding the CTRL key', 'Zaznacz wielu odbiorców przytrzymując klawisz CTRL',
+	'Retype Password' => 'Przepisz hasło',
+	'Write another Message' => 'Napisz następną wiadomość',
+	'Retype Password is incorrect.' => 'Przepisane hasło jest nieprawidłowe',
+	'Incorrect password (minimal length 4 symbols).' => 'Niepoprawne hasło (minimalna długość to 4 znaki)',
+	'Incorrect username (length between 3 and 20 characters).' => 'Niepoprawna nazwa użytkownika (długość pomiędzy 3 a 20 symboli)',
+	'Incorrect symbol\'s. (A-z0-9)' => 'Niepoprawne symbole. (A-z0-9)',
+	'Please enter the letters as they are shown in the image above.' => 'Prosze przepisać litery z powyższego obrazka',
+	'Letters are not case-sensitive.' => 'Wielkość liter nie ma znaczenia',
+	'Minimal password length 4 symbols.' => 'Minimalna długość hasła to 4 znaki',
+	'Lost Password?' => 'Zapomniałeś hasła?',
+	'Profile' => 'Profil',
+	'activation key' => 'Kod aktywujący',
+	'Back to profile' => 'Powrót do profilu',
+	'User activation' => 'Aktywacja użytkownika',
+	'Messages' => 'Wiadomości',
+	'You account is active.' => 'Twoje konto zostało aktywne',
+	'You account is activated.' => 'Twoje konto zostało aktywowane',
+	'Incorrect activation URL.' => 'Niepoprawny link aktywacyjny',
+	'Registration date' => 'Data rejestracji',
+	'Last visit' => 'Ostatnia wizyta',
+	'Manage profile Fields' => 'Zarządzaj polami profilu',
+	'Superuser' => 'Superuser',
+	'Status' => 'Status',
+	'Ok' => 'Ok',
+	'Save' => 'Zapisz',
+	'Logout' => 'Wyloguj',
+	'Manage User' => 'Zarządzaj użytkownikiem',
+	'New password is saved.' => 'Nowe hasło zostało zapisane',
+	'Change password' => 'Zmień hasło',
+	'Your profile' => 'Twój profil',
+	'Thank you for your registration. Please check your email or login.' => 'Dziękujemy za rejestrację. Sprawdź skrzynkę pocztową lub nazwę użytkownika',
+	'Thank you for your registration. Please check your email.' => 'Dziękujemy za rejestrację. Sprawdź skrzynkę pocztową',
+	'Please check your email. An instructions was sent to your email address.' => 'Proszę sprawdź skrzynkę pocztową. Instrukcje zostały wysłane na Twoj adres mailowy',
+	'Restore' => 'Odzyskaj',
+	'Please enter your login or email addres.' => 'Prosze wprowadzić swoją nazwę użytkownika lub adres E-Mail',
+	'Incorrect recovery link.' => 'Nieprawidłowy link odzyskiwania',
+	'Already exists.' => 'Już istnieje',
+	'First Name' => 'Imię',
+	'Last Name' => 'Nazwisko',
+	'No' => 'Nie',
+	'Yes' => 'Tak',
+	'Not active' => 'Nie aktywny',
+	'Active' => 'Aktywny',
+	'Banned' => 'Zbanowany',
+	'Please fill out the following form with your login credentials:' => 'Proszę wypełnić następujący formularz swoim uwierzytelnieniem użytkownika ',
+	'Fields with <span class="required">*</span> are required.' => 'Pola z <span class="required"> * </span> są wymagane',
+	'List User' => 'Listuj użytkowników',
+	'Edit' => 'Edytuj',
+	'Edit profile' => 'Edytuj profil',
+	'Send' => 'Wyślij',
+	'Create User' => 'Utwórz użytkownika',
+	'Success' => 'Sukces',
+	'Your Message has been sent.' => 'Twoja wiadomość została wysłana',
+	'Manage' => 'Zarządzaj',
+	'Manage Users' => 'Zarządzaj użytkownikami',
+	'Compose a Message' => 'Utwórz wiadomość',
+	'Compose new Message' => 'Utwórz nową wiadomość',
+	'From' => 'Od',
+	'To' => 'Do',
+	'Message' => 'Wiadomość',
+	'Title' => 'Tytuł',
+	'Delete Message' => 'Usuń wiadomość',
+	'Reply to Message' => 'Odpowiedz na wiadomość',
+	'Back to Inbox' => 'Powrót do skrzynki odbiorczej',
+	'My Inbox' => 'Moja skrzynka odbiorcza',
+	'Users' => 'Użytkownicy',
+	'You have new Messages !' => 'Masz nowe wiadomości !',
+	'Update User' => 'Zaktualizuj użytkownika',
+	'Delete User' => 'Usuń użytkownika',
+	'Your Message has been sent.' => 'Twoja wiadomość została wysłana.',
+	'View User' => 'Pokaż użytkownika',
+	'Send a message to this User' => 'Wyślij wiadomość do tego użytkownika',
+	'Back to my Profile' => 'Powrót do mojego profilu',
+	'Profile of ' => 'Profil ',
+	'Are you sure to delete this item?' => 'Czy jesteś pewnien, że chcesz to usunąć? ',
+	'Changes is saved.' => 'Zmiany zostały zapisane.',
+	'Mange Profile Field' => 'Zarządaj polem profilu',
+	'Variable name' => 'Zmienna nazwa',
+	'Title' => 'Tytuł',
+	'Field Type' => 'Typ pola',
+	'Field Size' => 'Rozmiar pola',
+	'Field Size min' => 'Minimalny rozmiar pola',
+	'Required' => 'Wymagany',
+	'Match' => 'Pasuje',
+	'Range' => 'Zakres',
+	'Error Message' => 'Błędna wiadomość',
+	'Other Validator' => 'Inna walidacja',
+	'Default' => 'Domyślny',
+	'Position' => 'Pozycja',
+	'Visible' => 'widoczny',
+	'Registered users' => 'Zarejestrowani użytkownicy',
+	'For all' => 'Dla wszystkich',
+	'Only owner' => 'Tylko właściciel',
+	'Hidden' => 'Ukryty',
+);
